--- a/momentum/templates/hot.html
+++ b/momentum/templates/hot.html
@@ -3,8 +3,8 @@
 
 {% block head %}
     <div class="d-flex gap-3 align-items-center">
-        <a href="/">New Questions</a>
-        <h3 href="/hot">Hot Questions</h3>
+        <a href="/">Новые</a>
+        <h3 href="/hot">Топовые публикации за неделю</h3>
     </div>
 {% endblock %}
 
