--- a/momentum/templates/index.html
+++ b/momentum/templates/index.html
@@ -3,8 +3,8 @@
 
 {% block head %}
     <div class="d-flex gap-3 align-items-center">
-        <h3 href="{% url 'index' %}">New Questions</h3>
-        <a href="{% url 'hot' %}">Hot Questions</a>
+        <h3 href="{% url 'index' %}">Новые посты</h3>
+        <a href="{% url 'hot' %}">Топ</a>
     </div>
 {% endblock head %}
 
