--- a/momentum/templates/layouts/unsigned_nav.html
+++ b/momentum/templates/layouts/unsigned_nav.html
@@ -29,8 +29,8 @@
                 </div>
             </form>
             <div class="d-flex gap-3 align-items-center" style="height: 50px">
-                <a class="m-3" href="{% url 'login' %}">Login</a>
-                <a class="m-3" href="{% url 'signup' %}">Register</a>
+                <a class="m-3" href="{% url 'login' %}">Войти</a>
+                <a class="m-3" href="{% url 'signup' %}">Зарегестрироваться</a>
             </div>
         </div>
     </nav>
