--- a/momentum/templates/layouts/nav.html
+++ b/momentum/templates/layouts/nav.html
@@ -20,7 +20,11 @@
                                     d="M0 0h24v24H0z"
                                     fill="none"></path>
                             <path stroke="#1f75fe" stroke-width="2"
-                                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09
+                                  3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5
+                                  4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5
+                                  11.99 14 9.5 14z">
+                            </path>
                         </svg>
                     </button>
                 </div>
@@ -28,18 +32,18 @@
         </form>
         <div class="d-flex justify-content-between gap-3">
             <div class="d-flex align-items-center me-4">
-                <a class="fw-bold" href="{% url 'ask' %}">ASK!</a>
+                <a class="fw-bold" href="{% url 'ask' %}">Запечатлеть</a>
             </div>
             <div class="border">
-                <img src="{{ user.profile.avatar_path.url }}" , width="50" height="50"/>
+                <img src="{{ user.profile.avatar_path.url }}" style="width: 50px; height: 50px; border: 0"/>
             </div>
             <div class="d-flex flex-column justify-content-between">
-                <div class="white">
+                <a class="link-success" href="{% url 'profile' %}">
                     {{ request.user.username }}
-                </div>
+                </a>
                 <div>
-                    <a href="{% url 'settings' %}">Settings</a>
-                    <a href="{% url 'logout' %}">Log out</a>
+                    <a href="{% url 'settings' %}">Настройки</a>
+                    <a href="{% url 'logout' %}">Выйти</a>
                 </div>
             </div>
         </div>
