--- a/momentum/templates/signup.html
+++ b/momentum/templates/signup.html
@@ -4,7 +4,7 @@
 
 {% block head %}
     <div class="d-flex gap-3 align-items-center">
-        <h1 class="white">Registration</h1>
+        <h1 class="white">Регистрация</h1>
     </div>
 {% endblock %}
 
@@ -13,7 +13,7 @@
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% bootstrap_form form %}
-            <button type="submit" class="btn my-btn mb-3">Success</button>
+            <button type="submit" class="btn my-btn mb-3">Зарегестрироваться!</button>
         </form>
     </div>
 {% endblock %}
