--- a/momentum/templates/layouts/nav.html
+++ b/momentum/templates/layouts/nav.html
@@ -4,10 +4,13 @@
         <a class="navbar-brand fw-bold white nav-brand-hover" href="{% url 'index' %}">
             Моментум
         </a>
-        <form class="d-flex" role="search">
+        <form class="d-flex" role="search" action="{% url 'search' %}" method="get">
             <div class="input-group">
                 <input class="form-control my-input"
                        type="search"
+                       name="q"
+                       id="search-input"
+                       placeholder="Поиск..."
                        aria-label="Search"/>
                 <div class="input-group-append">
                     <button class="btn my-btn" type="submit">
@@ -16,9 +19,7 @@
                              viewBox="0 0 24 24"
                              width="24px"
                              fill="#000000">
-                            <path
-                                    d="M0 0h24v24H0z"
-                                    fill="none"></path>
+                            <path d="M0 0h24v24H0z" fill="none"></path>
                             <path stroke="#1f75fe" stroke-width="2"
                                   d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09
                                   3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5
