--- a/momentum/templates/layouts/question.html
+++ b/momentum/templates/layouts/question.html
@@ -16,7 +16,7 @@
                         <a style="font-weight: 500; font-size: 15px" class="link-success" href="{% url 'user_profile' item.author %}">{{ item.author }}</a>
                     </div>
                        <div class="text-muted text-end col">
-                        Created at: {{ item.created_time }}
+                        Создан: {{ item.created_time }}
                     </div>
                 </div>
                 <div class="col">
@@ -66,7 +66,7 @@
                         </div>
                     {% include './elements/edit_post_button.html' with post=item  %}
                         <div class="text-muted">
-                            <i class="fas fa-star"></i> Rating: <span id="{{ item.id }}" class="question-rating">{{ item.likes_count }}</span>
+                            <i class="fas fa-star"></i> Рейтинг: <span id="{{ item.id }}" class="question-rating">{{ item.likes_count }}</span>
                         </div>
                     </div>
                 {% block media %}
