--- a/momentum/templates/question.html
+++ b/momentum/templates/question.html
@@ -90,7 +90,7 @@
             {% else %}
                 <div class="card border-danger mb-3">
                     <div class="card-body">
-                        Для взаимодействий с форумом их нужно <a href="{% url 'login' %}">войти</a> в аккаунт
+                        Для взаимодействий с сайтом нужно <a href="{% url 'login' %}">войти</a> в аккаунт
                         или <a href="{% url 'signup' %}"> зарегистрироваться</a>
                     </div>
                 </div>
