--- a/momentum/templates/layouts/base.html
+++ b/momentum/templates/layouts/base.html
@@ -3,7 +3,7 @@
 <html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
-    <title>ASK_Koshenkov</title>
+    <title>моментум</title>
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/css/bootstrap.css' %}">
     <link rel="shortcut icon" href='{% static "img/terminal_black_24dp.svg" %}'/>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
