--- a/momentum/templates/layouts/unsigned_nav.html
+++ b/momentum/templates/layouts/unsigned_nav.html
@@ -2,7 +2,7 @@
 <nav class="navbar nav-color">
         <div class="container-sm-fluid container-lg">
             <a class="navbar-brand fw-bold white nav-brand-hover" href="{% url 'index' %}">
-                ВОПРОСЫ?
+                Моментум
             </a>
             <form class="d-flex" role="search" action="{% url 'search' %}" method="get">
             <div class="input-group">
