--- a/momentum/templates/layouts/unsigned_nav.html
+++ b/momentum/templates/layouts/unsigned_nav.html
@@ -33,7 +33,7 @@
         </form>
             <div class="d-flex gap-3 align-items-center" style="height: 50px">
                 <a class="m-3" href="{% url 'login' %}">Войти</a>
-                <a class="m-3" href="{% url 'signup' %}">Зарегестрироваться</a>
+                <a class="m-3" href="{% url 'signup' %}">Зарегистрироваться</a>
             </div>
         </div>
     </nav>
